--- a/crates/compose-ui/Cargo.toml
+++ b/crates/compose-ui/Cargo.toml
@@ -13,6 +13,7 @@ compose-foundation = { path = "../compose-foundation" }
 compose-ui-layout = { path = "../compose-ui-layout" }
 compose-ui-graphics = { path = "../compose-ui-graphics" }
 indexmap = "2"
+smallvec = "1.13"
 
 [features]
 default = []
