--- a/apps/desktop-demo/Cargo.toml
+++ b/apps/desktop-demo/Cargo.toml
@@ -18,6 +18,8 @@ compose-ui = { path = "../../crates/compose-ui" }
 compose-ui-graphics = { path = "../../crates/compose-ui-graphics" }
 compose-ui-layout = { path = "../../crates/compose-ui-layout" }
 env_logger = "0.10"
+anyhow = "1.0.100"
+reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
 
 [dev-dependencies]
 compose-macros = { path = "../../crates/compose-macros" }
