--- a/crates/compose-platform/android-winit/Cargo.toml
+++ b/crates/compose-platform/android-winit/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 compose-foundation = { path = "../../compose-foundation" }
 compose-ui-graphics = { path = "../../compose-ui-graphics" }
-winit = "0.29"
+winit = { version = "0.29", features = ["android-native-activity"] }
