Add Android project for cross-platform support (#175)
* Add Android platform support with demo app

- Created compose-platform-android crate for Android platform abstraction
- Added android-demo app with full Gradle build configuration
- Updated compose-app crate to support both desktop and Android platforms
- Created AndroidManifest.xml and NativeActivity setup
- Added comprehensive build instructions for Android in README
- Updated workspace to include new Android-related crates

The demo app can now build for Android using cargo-ndk and Gradle,
bringing cross-platform Compose-RS UI to mobile devices.

* Fix Android build configuration for seamless Android Studio integration

- Fixed build.gradle.kts to use buildscript/allprojects pattern
- Simplified app build.gradle.kts with correct ABI filter syntax
- Added Gradle wrapper scripts (gradlew and gradlew.bat)
- Added gradle-wrapper.properties for Gradle 8.4
- Added .gitignore files for Android project
- Improved Rust build task to use single cargo-ndk command

The project can now be opened directly in Android Studio without any
additional configuration. Android Studio will automatically download
the gradle-wrapper.jar when the project is first opened.

* Update README with seamless Android Studio integration instructions

* Fix Android platform crate to use correct imports

- Changed from non-existent compose_foundation::geometry::Offset to compose_ui_graphics::Point
- Removed unused compose_foundation dependency
- Removed reference to non-existent Density type
- Simplified to match desktop-winit platform pattern

The Android platform crate now compiles successfully.

* Make compose-app platform-aware and fix Android build

- Made run_wgpu_app conditional on desktop feature
- Added Android-specific handling that doesn't use winit
- Updated android-demo to use proper NativeActivity lifecycle
- Implemented basic composition test in android_main
- Added comprehensive TODOs for full Android wgpu integration

The Androi

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/compose-ui",
     "crates/compose-testing",
     "crates/compose-platform/desktop-winit",
+    "crates/compose-platform/android",
     "crates/compose-render/common",
     "crates/compose-render/pixels",
     "crates/compose-render/wgpu",
@@ -20,3 +21,7 @@ members = [
     "apps/minimal-single-file",
 ]
 resolver = "2"
+
+[workspace.dependencies]
+# Force android-activity to use native-activity feature across all workspace crates
+android-activity = { version = "0.5", features = ["native-activity"] }
