--- a/crates/compose-app/Cargo.toml
+++ b/crates/compose-app/Cargo.toml
@@ -6,16 +6,24 @@ edition = "2021"
 [features]
 default = ["desktop", "renderer-pixels"]
 desktop = ["compose-platform-desktop-winit", "dep:winit"]
+android = ["compose-platform-android", "dep:ndk", "dep:ndk-context", "dep:android-activity", "dep:jni", "dep:android_logger", "dep:raw-window-handle"]
 renderer-pixels = ["compose-render-pixels", "dep:pixels"]
 renderer-wgpu = ["compose-render-wgpu", "dep:wgpu", "dep:pollster"]
 
 [dependencies]
 compose-app-shell = { path = "../compose-app-shell" }
 compose-platform-desktop-winit = { path = "../compose-platform/desktop-winit", optional = true }
+compose-platform-android = { path = "../compose-platform/android", optional = true }
 compose-render-pixels = { path = "../compose-render/pixels", optional = true }
 compose-render-wgpu = { path = "../compose-render/wgpu", optional = true }
 pixels = { version = "0.15", optional = true }
 wgpu = { version = "0.19", optional = true }
 pollster = { version = "0.3", optional = true }
 winit = { version = "0.29", optional = true }
+ndk = { version = "0.9", optional = true }
+ndk-context = { version = "0.1", optional = true }
+android-activity = { workspace = true, optional = true }
+jni = { version = "0.21", optional = true }
+android_logger = { version = "0.14", optional = true }
+raw-window-handle = { version = "0.6", optional = true }
 log = "0.4"
