--- a/crates/compose-foundation/Cargo.toml
+++ b/crates/compose-foundation/Cargo.toml
@@ -7,6 +7,7 @@ description = "Modifiers, nodes, and foundation elements for Compose-RS"
 
 [dependencies]
 compose-core = { path = "../compose-core" }
+compose-macros = { path = "../compose-macros" }
 compose-ui-graphics = { path = "../compose-ui-graphics" }
 compose-ui-layout = { path = "../compose-ui-layout" }
 smallvec = "1.13"
