--- a/crates/compose-ui/Cargo.toml
+++ b/crates/compose-ui/Cargo.toml
@@ -22,6 +22,9 @@ log = "0.4"
 
 [features]
 default = []
+# Enable test helpers like last_fling_velocity() for robot test verification.
+# This adds global state for cross-thread test access, so only enable in test builds.
+test-helpers = []
 
 [dev-dependencies]
 criterion = "0.5"
