--- a/apps/desktop-demo/Cargo.toml
+++ b/apps/desktop-demo/Cargo.toml
@@ -404,3 +404,23 @@ required-features = ["robot-app"]
 name = "robot_lazylist_redraw_bug"
 path = "robot-runners/robot_lazylist_redraw_bug.rs"
 required-features = ["robot-app"]
+
+[[example]]
+name = "robot_text_input_value_disappear"
+path = "robot-runners/robot_text_input_value_disappear.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_advance_frame_bug"
+path = "robot-runners/robot_advance_frame_bug.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_lazy_list_order_bug"
+path = "robot-runners/robot_lazy_list_order_bug.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_composition_local_disappear"
+path = "robot-runners/robot_composition_local_disappear.rs"
+required-features = ["robot-app"]
