--- a/apps/desktop-demo/Cargo.toml
+++ b/apps/desktop-demo/Cargo.toml
@@ -2,6 +2,9 @@
 name = "desktop-app"
 version = "0.1.0"
 edition = "2021"
+description = "RS-Compose desktop demo application."
+repository = "https://github.com/samoylenkodmitry/rs-compose"
+license = "Apache-2.0"
 
 [package.metadata.wasm-pack.profile.release]
 # Enable wasm-opt with size optimization (can reduce WASM size by 20-40%)
@@ -30,7 +33,7 @@ desktop = ["compose-app/desktop"]
 android = ["compose-app/android"]
 web = ["compose-app/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wasm-logger"]
 # Enable real app robot testing
-robot-app = ["compose-testing/robot-app", "logging"]
+robot-app = ["compose-testing/robot-app", "logging", "compose-ui/test-helpers"]
 # Enable env_logger (adds ~600KB from regex)
 logging = ["dep:env_logger"]
 
@@ -315,4 +318,109 @@ required-features = ["robot-app"]
 [[example]]
 name = "robot_lazy_scroll_edge_cases"
 path = "robot-runners/robot_lazy_scroll_edge_cases.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_fling"
+path = "robot-runners/robot_fling.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_fling_precise"
+path = "robot-runners/robot_fling_precise.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_scroll_jump"
+path = "robot-runners/robot_scroll_jump.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_test_recorder"
+path = "robot-runners/robot_test_recorder.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "scroll_reproduce_recording"
+path = "robot-runners/scroll_reproduce_recording.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_scroll_persistence"
+path = "robot-runners/robot_scroll_persistence.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "no_fling_recording"
+path = "robot-runners/no_fling_recording.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_no_fling_recording2"
+path = "robot-runners/robot_no_fling_recording2.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "too_fast_fling_recording"
+path = "robot-runners/too_fast_fling_recording.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "absent_gradient_area_recording"
+path = "robot-runners/absent_gradient_area_recording.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_gradient_tab_switch"
+path = "robot-runners/robot_gradient_tab_switch.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_fling_edge_cases"
+path = "robot-runners/robot_fling_edge_cases.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_scroll_visual"
+path = "robot-runners/robot_scroll_visual.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_tabbar_drag"
+path = "robot-runners/robot_tabbar_drag.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_modifier_render"
+path = "robot-runners/robot_modifier_render.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_scroll_to_item_redraw"
+path = "robot-runners/robot_scroll_to_item_redraw.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_lazylist_redraw_bug"
+path = "robot-runners/robot_lazylist_redraw_bug.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_text_input_value_disappear"
+path = "robot-runners/robot_text_input_value_disappear.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_advance_frame_bug"
+path = "robot-runners/robot_advance_frame_bug.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_lazy_list_order_bug"
+path = "robot-runners/robot_lazy_list_order_bug.rs"
+required-features = ["robot-app"]
+
+[[example]]
+name = "robot_composition_local_disappear"
+path = "robot-runners/robot_composition_local_disappear.rs"
 required-features = ["robot-app"]
