--- a/crates/compose-core/Cargo.toml
+++ b/crates/compose-core/Cargo.toml
@@ -8,8 +8,9 @@ description = "Core runtime for a Jetpack Compose inspired UI framework in Rust"
 [dependencies]
 futures-task = "0.3"
 ahash = "0.8.12"
-rustc-hash = "1.1.0"
+rustc-hash = "2.1"
 smallvec = "1.15.1"
+log = "0.4"
 
 [features]
 default = []
